--- a/myeditor.cabal
+++ b/myeditor.cabal
@@ -23,5 +23,6 @@ executable myeditor
   build-depends:       base >=4.13 && <4.14
                      , vty
                      , brick
+                     , directory
   -- hs-source-dirs:
   default-language:    Haskell2010
